Commit Створено першку сторінку/Відредаговано форму

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk-UA">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>"Simon's Cat"-review</title>
 </head>
 <body>
-    
+    <section class="main-page">
+        <h2 style="color:black; text-align: center;">Історія найпопулярнішого мальованого кота</h2>
+        <h1 style="color: black; text-align: center;">Саймон і його кіт</h1>
+        <h2 style="color:darkmagenta; text-align: center;">Як народився кіт Саймона</h2>
+            <p style="text-indent: 20px; text-align: justify;">
+            Саймон Тофілд, творець знаменитого мультфільму — британський художник і аніматор. Усе своє життя він малює, і найбільше йому завжди подобалася дика природа.
+            Саймон навчався анімації в університеті Де Монфор в Лестері, і так як малювання було єдиним, що він умів і хотів робити, Саймон влаштувався на роботу аніматором і дизайнером. Переважну більшість його замовлень складали рекламні роботи, що приносило йому мало задоволення. 
+            На той час Саймон Тофілд працював лише на анімаційному папері, оживляючи картинку повністю вручну. Саме тоді він замислився над тим, щоб опанувати нові, цифрові засоби створення анімації. Ідею для першої спроби йому підкинув кіт Хью, який рано вранці настирливо будив його, облизуючи і покусуючи обличчя, вимагаючи сніданок. Так народився перший мультфільм "Cat Man Do". 
+            </p>
+        <h2 style="color: darkmagenta; text-align: center;">Ідея мультфільму</h2>
+            <p style="text-indent: 20pt; text-align: justify;">
+            У кожному епізоді головний персонаж - домашній кіт, що вдається до різноманітних способів привернути увагу господаря, щоб той погодував його, впустив у будинок, погладив і таке інше.
+            Поведінка Кота Саймона дуже схожа на поведінку реальних котів, хоч і представлена у гротескному вигляді. у котів Саймона безліч кумедних рис, які роблять їх справжніми, хоч і більш схожими на людей.
+            Наприклад, Кіт Саймона будить свого господаря битою по голові. А коли хоче їсти, вказує на свій рот і нявчить. Він часто влаштовує підступні пастки. 
+            Звісно, звичайні коти так не роблять, проте, як гадає Саймон Тофілд, саме так вони і думають. 
+           </p>
+    </section>
 </body>
 </html>
