Додано зображення до сторінки gallery

--- a/gallery.html
+++ b/gallery.html
@@ -7,7 +7,23 @@
     <title>"Simon's Cat" gallery</title>
 </head>
 <body>
-    
-    
+    <section class="Simon's Cat gallery-page" style="text-align: center;">
+        <h1>Саймон і його кіт</h1>
+            <p>
+                <img src="./img/123456.jpg" alt="">
+            </p>
+            <p>
+                <img src="./img/56789.jpg" alt="">
+            </p>
+            <p>
+                <img src="./img/345678.jpg" alt="">
+            </p>
+            <p> 
+                <img src="./img/45678.jpg" alt="">
+            </p>
+            <p> 
+                <img src="./img/23456.jpg" alt="">
+            </p>
+    </section>
 </body>
 </html>
