Додано посилання між сторінками

--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="Simon's Cat gallery-page" style="text-align: center;">
-        <h1>Саймон і його кіт</h1>
+        <h1>Саймон і його кіт - зображення</h1>
             <p>
                 <img src="./img/123456.jpg" alt="">
             </p>
@@ -23,6 +23,10 @@
             </p>
             <p> 
                 <img src="./img/23456.jpg" alt="">
+            </p>
+            
+            <p>
+                <a href="index.html">Саймон і його кіт - Головна</a>
             </p>
     </section>
 </body>
