--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             Поведінка Кота Саймона дуже схожа на поведінку реальних котів, хоч і представлена у гротескному вигляді. у котів Саймона безліч кумедних рис, які роблять їх справжніми, хоч і більш схожими на людей.
             Наприклад, Кіт Саймона будить свого господаря битою по голові. А коли хоче їсти, вказує на свій рот і нявчить. Він часто влаштовує підступні пастки. 
             Звісно, звичайні коти так не роблять, проте, як гадає Саймон Тофілд, саме так вони і думають. 
-           </p>
+            </p>
+            <p style="text-align: center;">
+                <a href="gallery.html">Саймон і його кіт - зображення</a>
+            </p>
     </section>
 </body>
 </html>
