Додано інформацію до сторінки index

--- a/index.html
+++ b/index.html
@@ -27,5 +27,21 @@
                 <a href="gallery.html">Саймон і його кіт - зображення</a>
             </p>
     </section>
+    <form action="https://fom.in.ua/echo" method="post">
+        <section class="information-page" style="text-align: center;">
+            <div class="information-page">
+                <fieldset>
+                <hr><strong style="color:midnightblue;">Це також цікаво</strong><hr>
+                    <h3 style="color: brown;">Git Bash. Команди</h3>
+                    <ul style="text-align: left;">
+                        <li>$ git status - перегляд змін та створення коммітів (фіксація змін)</li>
+                        <li>$ git add [файл] - індексує вказаний файл для наступного коміту</li>
+                        <li>$ git commit -m "[повідомлення з описом]" - фіксує проіндексовані зміни та зберігає їх в історію версій</li>
+                        <li>$ git push [віддалений репозиторій] [гілка] - Завантажує всі зміни локальної гілки у віддалений репозиторій</li>
+                    </ul>
+                </fieldset>
+            </div>
+        </section>
+    </form>
 </body>
 </html>
